--- a/ToDoApp/templates/todo.html
+++ b/ToDoApp/templates/todo.html
@@ -21,7 +21,7 @@
           </svg>
     </div>
     
-    <div class="container" style="display: inline;">      
+    <div class="container" style="display: inline;   text-align: center;">      
       <a class="navbar-brand" style = "font-size: 2.5em " href="/todo/">Todo-List</a>
     </div>
   </nav>
