--- a/simpleBlog/templates/article_details.html
+++ b/simpleBlog/templates/article_details.html
@@ -7,8 +7,9 @@
 
 <h1>{{ post.title }}</h1>
 
-<small> By : {{post.author.first_name}} {{ post.author.last_name }}
-</small><br/>
+<small> By : {{post.author.first_name}} {{ post.author.last_name }} - {{ post.post_date }} -
+ <pre class="tab" style = "display : inline ;">(<a href = "{% url 'update_post' post.pk %}">Edit</a>) (<a href = "{% url 'delete_post' post.pk %}">Delete</a>)</pre>
+</small> <br/>
 <hr>
 <br/>
 {{ post.body }}
