--- a/simpleBlog/templates/add_post.html
+++ b/simpleBlog/templates/add_post.html
@@ -6,6 +6,10 @@
 
 <h1>Add Blog Post</h1>
 <br/><br/>
+
+
+{% if user.is_authenticated %}
+
 <div class = "form-group">
     <form method = "POST">
         {% csrf_token %}
@@ -13,5 +17,12 @@
         <button class = "btn btn-primary">Post</button>
     </form>
 </div>
+
+{% else %}
+    <div class="alert alert-warning" role="alert">
+    Please Login to Add Post !
+    </div>
+
+{% endif %}
 
  {% endblock %}
