--- a/simpleBlog/templates/article_details.html
+++ b/simpleBlog/templates/article_details.html
@@ -7,12 +7,17 @@
 
 <h1>{{ post.title }}</h1>
 
-<small> By : {{post.author.first_name}} {{ post.author.last_name }} - {{ post.post_date }} -
- <pre class="tab" style = "display : inline ;">(<a href = "{% url 'update_post' post.pk %}">Edit</a>) (<a href = "{% url 'delete_post' post.pk %}">Delete</a>)</pre>
-</small> <br/>
+<small> By : {{post.author.first_name}} {{ post.author.last_name }} - {{ post.post_date }}
+{% if user.is_authenticated %}
+    -
+    <pre class="tab" style = "display : inline ;">(<a href = "{% url 'update_post' post.pk %}">Edit</a>) (<a href = "{% url 'delete_post' post.pk %}">Delete</a>)</pre>
+{% endif %}
+</small>
+ <br/>
 <hr>
 <br/>
-{{ post.body }}
+
+{{ post.body|safe }}
 
 <br/><br/>
 <a href= "{% url 'home' %}" class="btn btn-primary">Back</a>
