--- a/simpleBlog/templates/update_post.html
+++ b/simpleBlog/templates/update_post.html
@@ -6,12 +6,22 @@
 
 <h1>Update Post</h1>
 <br/><br/>
+
+{% if user.is_authenticated %}
+
 <div class = "form-group">
     <form method = "POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class = "btn btn-primary">Update</button>
+        <div style = "tab-size : 4;">
+            <button class = "btn btn-primary" >Update</button>-
+            <a href= "{% url 'home' %}" class="btn btn-primary">  Back  </a>
+        </div>
     </form>
 </div>
-
+{% else %}
+    <div class="alert alert-warning" role="alert">
+    Please Login to Update a Post !
+    </div>
+{% endif %}
  {% endblock %}
