--- a/my_project/resume/templates/resume/base_3.html
+++ b/my_project/resume/templates/resume/base_3.html
@@ -1,4 +1,4 @@
-﻿{% load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -27,12 +27,12 @@
     <script src="{% static 'js/modernizr.custom.js' %}"></script>
 </head>
 
-<body class="home">
+<body class="contact">
 <!-- Header Starts -->
 <header class="header" id="navbar-collapse-toggle">
     <!-- Fixed Navigation Starts -->
     <ul class="icon-menu d-none d-lg-block revealator-slideup revealator-once revealator-delay1">
-        <li class="icon-box active">
+        <li class="icon-box">
             <i class="fa fa-home"></i>
             <a href="{% url 'home' %}">
                 <h2>Home</h2>
@@ -50,7 +50,7 @@
                 <h2>Portfolio</h2>
             </a>
         </li>
-        <li class="icon-box">
+        <li class="icon-box active">
             <i class="fa fa-envelope-open"></i>
             <a href="{% url 'contact' %}">
                 <h2>Contact</h2>
@@ -66,19 +66,19 @@
             <span></span>
             <span></span>
             <ul class="list-unstyled" id="menu">
-                <li class="active"><a href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
+                <li><a href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
                 <li><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
                 <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
-                <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
-            </ul>
+                <li class="active"><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
+           </ul>
         </div>
     </nav>
     <!-- Mobile Menu Ends -->
 </header>
 <!-- Header Ends -->
-<!-- Main Content Starts -->
-<!-- Main Content Ends -->
-    
+<!-- Page Title Starts -->
+{% block content %}
+{% endblock content %}
 <!-- Template JS Files -->
 <script src="{% static 'js/jquery-3.5.0.min.js' %}"></script>
 <script src="{% static 'js/preloader.min.js' %}"></script>
@@ -91,10 +91,6 @@
 <script src="{% static 'js/bootstrap.js' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/classie.js' %}"></script>
-
-{% block content %}
-
-    {% endblock content %}
 
 </body>
 
