--- a/userProject/templates/index.html
+++ b/userProject/templates/index.html
@@ -11,7 +11,7 @@
     <title>Logged in User</title>
   </head>
   <body>
-    Welcome {request.user}
+    Welcome {{request.user}}
     <p>Website banane ka try karen</p>
     <a href="/logout">Logout</a>
     <!-- Optional JavaScript; choose one of the two! -->
