--- a/my_project/resume/templates/resume/about.html
+++ b/my_project/resume/templates/resume/about.html
@@ -36,7 +36,7 @@
                             <li> <span class="title">Address :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">{{ resume.City }}</span> </li>
                             <li> <span class="title">phone :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">{{ resume.Phone }}</span> </li>
                             <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">{{ resume.Email }}</span> </li>
-                            <li> <span class="title">GitHub :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">{{ resume.GitHub }}</span> </li>
+                            <li> <span class="title">GitHub :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block"><a href = "https://github.com/manan2110" target = "_blank " style = "text-decoration: none;">{{ resume.GitHub }}</a></span> </li>
                             <li> <span class="title">languages :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">{{ resume.Languages }}</span> </li>
                         </ul>
                     </div>
