--- a/my_project/resume/templates/resume/portfolio.html
+++ b/my_project/resume/templates/resume/portfolio.html
@@ -74,64 +74,7 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="{% static 'img/projects/blog.jpg' %}" alt="Portolio Image" />
-                        <!-- Main Project Content Ends -->
-                    </figure>
-                </li>
-                <!-- Portfolio Item Detail Ends -->
-                <!-- Portfolio Item Detail Starts -->
-                <li>
-                    <figure>
-                        <!-- Project Details Starts -->
-                        <figcaption>
-                            <h3>Youtube Project</h3>
-                            <div class="row open-sans-font">
-                                <div class="col-6 mb-2">
-                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Video</span>
-                                </div>
-                                <div class="col-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Videohive</span>
-                                </div>
-                                <div class="col-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">Adobe After Effects</span>
-                                </div>
-                                <div class="col-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.videohive.net</a></span>
-                                </div>
-                            </div>
-                        </figcaption>
-                        <!-- Project Details Ends -->
-                        <!-- Main Project Content Starts -->
-                        <div class="videocontainer">
-                            <iframe class="youtube-video" src="https://www.youtube.com/embed/7e90gBu4pas?enablejsapi=1&version=3&playerapiid=ytplayer" allowfullscreen></iframe>
-                        </div>
-                        <!-- Main Project Content Ends -->
-                    </figure>
-                </li>
-                <!-- Portfolio Item Detail Ends -->
-                <!-- Portfolio Item Detail Starts -->
-                <li>
-                    <figure>
-                        <!-- Project Details Starts -->
-                        <figcaption>
-                            <h3>Slider Project</h3>
-                            <div class="row open-sans-font">
-                                <div class="col-6 mb-2">
-                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
-                                </div>
-                                <div class="col-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Themeforest</span>
-                                </div>
-                                <div class="col-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript</span>
-                                </div>
-                                <div class="col-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.themeforest.net</a></span>
-                                </div>
-                            </div>
-                        </figcaption>
-                        <!-- Project Details Ends -->
-                        <!-- Main Project Content Starts -->
+
                         <div id="slider" class="carousel slide portfolio-slider" data-ride="carousel" data-interval="false">
                             <ol class="carousel-indicators">
                                 <li data-target="#slider" data-slide-to="0" class="active"></li>
@@ -141,16 +84,74 @@
                             <!-- The slideshow -->
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="http://via.placeholder.com/895x552.jpg" alt="Portolio Image" />
+                                    <img src="{% static 'img/projects/blog.jpg' %}" alt="Portolio Image" />
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="http://via.placeholder.com/895x552.jpg" alt="Portolio Image" />
+                                    <img src="{% static 'img/projects/blog.jpg' %}" alt="Portolio Image" />
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="http://via.placeholder.com/895x552.jpg" alt="Portolio Image" />
+                                    <img src="{% static 'img/projects/blog.jpg' %}" alt="Portolio Image" />
                                 </div>
                             </div>
-                        </div>
+
+
+                        
+                        <!-- Main Project Content Ends -->
+                    </figure>
+                </li>
+                <!-- Portfolio Item Detail Ends -->
+                <!-- Portfolio Item Detail Starts -->
+                <li>
+                    <figure>
+                        <!-- Project Details Starts -->
+                        <figcaption>
+                            <h3>Todo-List App</h3>
+                            <div class="row open-sans-font">
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">A Todo-list Webapp</span>
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Self</span>
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">Django, HTML, CSS</span>
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://github.com/manan2110/django/tree/master/ToDoApp" target="_blank">Link to repository</a></span>
+                                </div>
+                            </div>
+                        </figcaption>
+                        <!-- Project Details Ends -->
+                        <!-- Main Project Content Starts -->
+                        <img src="{% static 'img/projects/todo.jpg' %}" alt="Portolio Image" />
+                        <!-- Main Project Content Ends -->
+                    </figure>
+                </li>
+                <!-- Portfolio Item Detail Ends -->
+                <!-- Portfolio Item Detail Starts -->
+                <li>
+                    <figure>
+                        <!-- Project Details Starts -->
+                        <figcaption>
+                            <h3>User Sign-In App</h3>
+                            <div class="row open-sans-font">
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">User Sign-In App</span>
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Self</span>
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">Django, HTML, CSS</span>
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://github.com/manan2110/django/tree/master/userProject" target="_blank">Link to repository</a></span>
+                                </div>
+                            </div>
+                        </figcaption>
+                        <!-- Project Details Ends -->
+                        <!-- Main Project Content Starts -->
+                        <img src="{% static 'img/projects/sign-in.jpg' %}" alt="Portolio Image" />
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
