--- a/todo_rest/frontend/templates/list.html
+++ b/todo_rest/frontend/templates/list.html
@@ -101,9 +101,29 @@
 
 
     <script>
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+        const csrftoken = getCookie('csrftoken');
+
+
         buildList()
+
         function buildList() {
             var wrapper = document.getElementById('list-wrapper')
+            wrapper.innerHTML = ''
             var url = 'http://127.0.0.1:8000/api/task-list/'
             fetch(url)
                 .then((resp) => resp.json())
@@ -129,6 +149,27 @@
                     }
                 })
         }
+
+        var form = document.getElementById('form-wrapper')
+        form.addEventListener('submit', function (e) {
+            e.preventDefault()
+            console.log('Form Submitted')
+            var url = 'http://127.0.0.1:8000/api/task-create/'
+            var title = document.getElementById('title').value
+            fetch(url, {
+                method: 'POST',
+                headers: {
+                    'Content-type': 'application/json',
+                    'X-CSRFToken': csrftoken,
+                },
+                body: JSON.stringify({ 'title': title })
+            }
+            ).then(function (response) {
+                buildList()
+                document.getElementById('form').reset()
+            })
+
+        })
     </script>
 </body>
 
