fixed the rendering of the task list along with striking item eventlistener

--- a/todo_rest/frontend/templates/list.html
+++ b/todo_rest/frontend/templates/list.html
@@ -119,12 +119,15 @@
         const csrftoken = getCookie('csrftoken');
 
         var activeItem = null
+        var list_snapshot = []
 
         buildList()
 
         function buildList() {
             var wrapper = document.getElementById('list-wrapper')
-            wrapper.innerHTML = ''
+            //wrapper.innerHTML = ''
+
+
             var url = 'http://127.0.0.1:8000/api/task-list/'
             fetch(url)
                 .then((resp) => resp.json())
@@ -133,10 +136,20 @@
 
                     var list = data
                     for (var i in list) {
+                        try {
+                            document.getElementById(`data-row-${i}`).remove()
+                        } catch (err) {
+
+                        }
+
+                        var title = `<span class = "title">${list[i].title}</span>`
+                        if (list[i].completed == true) {
+                            var title = `<strike class = "title">${list[i].title}</strike>`
+                        }
                         var item = `
                             <div id = "data-row-${i}" class = "task-wrapper flex-wrapper">
                                 <div style = "flex:7">         
-                                    <span class = "title">${list[i].title}</span>
+                                    ${title}
                                 </div>
                                 <div style = "flex:1">         
                                     <button class = "btn btn-sm btn-outline-info edit">Edit</button>
@@ -148,14 +161,35 @@
                         `
                         wrapper.innerHTML += item
                     }
-
+                    if (list_snapshot.length > list.length) {
+                        for (var i = list.length; i < list_snapshot.length; i++) {
+                            document.getElementById(`data-row-${i}`).remove()
+                        }
+                    }
+                    list_snapshot = list
                     for (var i in list) {
                         var editBtn = document.getElementsByClassName('edit')[i]
+                        var deleteBtn = document.getElementsByClassName('delete')[i]
+                        var title = document.getElementsByClassName('title')[i]
+
                         editBtn.addEventListener('click', (function (item) {
                             return function () {
                                 editTask(item)
                             }
                         })(list[i]))
+
+                        deleteBtn.addEventListener('click', (function (item) {
+                            return function () {
+                                deleteTask(item)
+                            }
+                        })(list[i]))
+
+                        title.addEventListener('click', (function (item) {
+                            return function () {
+                                strikeUnstrike(item)
+                            }
+                        })(list[i]))
+
                     }
                 })
         }
@@ -189,6 +223,36 @@
             console.log('Item clicked: ', item)
             activeItem = item
             document.getElementById('title').value = activeItem.title
+        }
+
+        function deleteTask(item) {
+            console.log('Delete clicked')
+            var url_delete = `http://127.0.0.1:8000/api/task-delete/${item.id}/`
+            fetch(url_delete, {
+                method: 'DELETE',
+                headers: {
+                    'Content-type': 'application/json',
+                    'X-CSRFToken': csrftoken,
+                }
+            }).then((response) => {
+                buildList()
+            })
+        }
+
+        function strikeUnstrike(item) {
+            console.log('Strike Clicked')
+            item.completed = !item.completed
+            var url_update = `http://127.0.0.1:8000/api/task-update/${item.id}/`
+            fetch(url_update, {
+                method: 'POST',
+                headers: {
+                    'Content-type': 'application/json',
+                    'X-CSRFToken': csrftoken,
+                },
+                body: JSON.stringify({ 'title': item.title, 'completed': item.completed })
+            }).then((response) => {
+                buildList()
+            })
         }
     </script>
 </body>
