--- a/userProject/templates/login.html
+++ b/userProject/templates/login.html
@@ -1,103 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
 
     <style>
-        html,
-        body {
-            height: 100%;
+        * {
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         }
 
-        body {
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-align: center;
-            align-items: center;
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: #f5f5f5;
-        }
-
-        .form-signin {
-            width: 100%;
-            max-width: 330px;
-            padding: 15px;
+        .main-container {
             margin: auto;
+            width: 50%;
+            border-radius: 20px;
+            box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.75);
+            -webkit-box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.75);
         }
 
-        .form-signin .checkbox {
-            font-weight: 400;
-        }
-
-        .form-signin .form-control {
-            margin: 16px 3px;
-            position: relative;
-            box-sizing: border-box;
-            height: auto;
+        .login-container {
             padding: 10px;
-            font-size: 16px;
-        }
-
-        .form-signin .form-control:focus {
-            z-index: 2;
-        }
-
-        .form-signin input[type="email"] {
-            margin-bottom: -1px;
-            border-bottom-right-radius: 0;
-            border-bottom-left-radius: 0;
-        }
-
-        .form-signin input[type="password"] {
-            margin-bottom: 10px;
-            border-top-left-radius: 0;
-            border-top-right-radius: 0;
-        }
-
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
     </style>
-    <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
 </head>
 
-<body class="text-center">
-    <form class="form-signin" method="post" action="/login">
-        {% csrf_token %}
-        <h1 class="h3 mb-3 font-weight-normal">Please Sign-In</h1>
-        <label for="inputEmail" class="sr-only">Username</label>
-        <input type="text" id="inputEmail" name="username" class="form-control" placeholder="Username" required
-            autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
+<body>
+    <div class="main-container">
+        <div class="login-container">
+            {% if load %}
+
+            <h1>Login Sucessfull payload recived!</h1>
+
+            <p>{{load}}</p>
+            {% else %}
+
+            <h1>Login</h1>
+            {% include "partials/_sawo.html" %} {% endif %}
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    </form>
+    </div>
 </body>
 
 </html>
